# aurora-gas-estimator

./: .gitmodules  Cargo.toml  README.md
docs/: scripts.md  scripts_json_format.md
examples/: erc20.json  erc20.script  eth_transfer.json  eth_transfer.script  simple_contract_call.json  simple_contract_call.script
src/: errors.rs  main.rs  mocked_external.rs  parser.rs  program.rs  runtime.rs  solidity.rs
src/runtime/: mod.rs  value.rs  vm.rs
src/tests/: mod.rs
