[package]
name = "aurora-gas-estimator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aurora-engine = { path = "./aurora-engine/engine/", features = ["std"] }
aurora-engine-sdk = { path = "./aurora-engine/engine-sdk/", features = ["std"] }
aurora-engine-transactions = { path = "./aurora-engine/engine-transactions/", features = ["std"] }
aurora-engine-types = { path = "./aurora-engine/engine-types/", features = ["std"] }
borsh = "0.8.2"
clap = { version = "3.1.6", features = ["derive"] }
hex = "0.4.3"
libsecp256k1 = "0.3.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
