[package]
name = "aurora-gas-estimator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aurora-engine = { path = "./aurora-engine/engine/", features = ["std", "impl-serde"] }
aurora-engine-sdk = { path = "./aurora-engine/engine-sdk/", features = ["std"] }
aurora-engine-transactions = { path = "./aurora-engine/engine-transactions/", features = ["std", "impl-serde"] }
aurora-engine-types = { path = "./aurora-engine/engine-types/", features = ["std", "impl-serde"] }
borsh = "0.8.2"
clap = { version = "3.1.6", features = ["derive"] }
ethabi = { git = "https://github.com/darwinia-network/ethabi", branch = "xavier-no-std" }
hex = "0.4.3"
libsecp256k1 = "0.3.5"
near-primitives-core = { git = "https://github.com/near/nearcore.git", rev = "39ab20bc8f3832e9f66a098d600ce9b2998e1cd7" }
near-primitives = { git = "https://github.com/near/nearcore.git", rev = "39ab20bc8f3832e9f66a098d600ce9b2998e1cd7" }
near-vm-logic = { git = "https://github.com/near/nearcore.git", rev = "39ab20bc8f3832e9f66a098d600ce9b2998e1cd7" }
near-vm-runner = { git = "https://github.com/near/nearcore.git", rev = "39ab20bc8f3832e9f66a098d600ce9b2998e1cd7", default-features = false, features = [ "wasmer2_vm" ] }
nom = "7.1.1"
rand = "0.7.3"
rlp = "0.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
